ChangeLog

Upcoming version
[BUGFIX]  Use localized search result images. https://github.com/tpwd/ke_search/issues/77
[BUGFIX]  Fix typo in tt_content indexer file indexing. Thanks to Nimmermaer. https://github.com/tpwd/ke_search/pull/97
[BUGFIX]  Fix fetching of the FlexForm settings in the list view plugin
[TASK]    Group plugins in plugin selector by using addTcaSelectItemGroup. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/92
[TASK]    Remove deprecated TCA configurations. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/93
[TASK]    Clean up ext_emconf.php. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/94
[TASK]    Add file metadata to resultrow. https://github.com/tpwd/ke_search/issues/75
[DOCS]    Align with new TYPO3 documentation standards. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/95

Version 4.4.1, May 2022
[BUGFIX]  Add PHP version constraint. Thanks to Mathias Brodala. https://github.com/tpwd/ke_search/pull/89

Version 4.4.0, April 2022
[!!!]     For files indexed by the non-FAL-indexer the absolute path is now stored in the index instead of the relative path.
[!!!]     The file modification date is not part of the hash for indexed files anymore. That means all files have to be re-indexed after updating the extension. Please start the full indexing.
[!!!]     This version needs at least PHP 7.4, although it is not stated in the composer.json.
[FEATURE] Add incremental indexing for files. https://github.com/tpwd/ke_search/issues/64
[FEATURE] Add date range filter. https://github.com/tpwd/ke_search/issues/40
[BUGFIX]  Fix PHP8 issue with non-existing array index in file indexer. https://github.com/tpwd/ke_search/issues/84
[BUGFIX]  Avoid typo3conf path when including backend CSS file. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/80
[BUGFIX]  Unset page parameter for filter options in 'list' type filter. https://github.com/tpwd/ke_search/issues/24